[package]
name = "malborn-chain-executor"
version = "2.0.12"
authors = ["Malborn Inc."]
edition = "2018"

[dependencies]
parity-scale-codec = "2.2.0"
malborn-chain-primitives = { path = "../primitives" }
malborn-chain-runtime = { path = "../runtime" }
sc-executor = "0.9.0"
sp-core = "3.0.0"
sp-io = "3.0.0"
sp-state-machine = "0.9.0"
sp-trie = "3.0.0"
trie-root = "0.16.0"
frame-benchmarking = "3.1.0"

[features]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []