[package]
name = "dvamm-factory"
version = "0.0.0"
authors = ["Luis Quispe Gonzales"]
edition = "2018"
description = "DVAMM factory contract - auto pair contract generator and also directory for all pairs"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
dvamm = { path = "../../packages/dvamm", default-features = false, version = "2.4.0"}
cosmwasm-std = { version = "0.16.0", features = ["iterator"] }
cw-storage-plus = {version = "0.8.0", features = ['iterator']}
cw2 = "0.8"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
protobuf = { version = "2", features = ["with-bytes"] }

[dev-dependencies]
cosmwasm-schema = "0.16.0"
dvamm-pair = {path = "../pair"}
